fix icon size on small screen

--- a/aidants_connect_web/static/css/login.css
+++ b/aidants_connect_web/static/css/login.css
@@ -39,3 +39,8 @@
     min-height: 1054px;
   }
 }
+
+.login-left-icon {
+  max-width: 75%;
+  height: auto;
+}
